add points, users get endpoints
